<resources>
    <!--  Flight Tracker Strings  -->
    <string name="airport_code">Airport Code</string>
    <string name="search_flights">Search</string>
    <string name="enter_code">E.g. YOW - Ottawa</string>
    <string name="saved_flights">Favorites</string>
    <string name="main_page_hint">Enter Depart Airport Code</string>
    <string name="delay">Delay:</string>
    <string name="destination_airport">Destination Airport:</string>
    <string name="terminal">Terminal:</string>
    <string name="gate">Gate:</string>
    <string name="departure_airport">Departure Airport:</string>
    <string name="flight_details">Flight Details</string>
    <string name="departure_time">Departure Time:</string>
    <string name="arrival_time">Arrival Time:</string>
    <string name="flight_number">Flight Number</string>
    <string name="save_flight_btn">Save Flight</string>
    <string name="details_btn">Details</string>
    <string name="delete_flight_btn">Delete Flight</string>
    <string name="flight_save_success">Flight saved successfully!</string>
    <string name="ask_if_delete">Do you want to delete this flight?\n</string>
    <string name="flight_delete_success">Flight deleted successfully!</string>
    <string name="flight_undo">Undo</string>
    <string name="flight_attention">Attention</string>
    <string name="flight_guide">Guide</string>
    <string name="flight_main_page_guide">
        1. Enter an Airport Code and click for searching flight. E.g. \'YOW\' for flights depart from Ottawa. Click \'DETAILS\' to view and SAVE.\n2. Click \'FAVORITES\' to view your saved flights. Click \'DETAILS\' to view and DELETE.
    </string>
    <string name="flight_save_page_guide">
        Save this flight in your FAVORITES list.\nYou can review it on the main page.
    </string>
    <string name="flight_delete_page_guide">
        Delete this flight if you no longer need it.\nYou can undo the delete action.
    </string>
    <string name="flight_load_error">
        Sorry, we \'re having trouble fetching flight data right now.\nPlease try again in a few moments.
    </string>
    <!--  End Flight Tracker part  -->

    <string name="title">Final Project</string>
    <string name="project3">Trivia Question Database</string>
    <string name="topic">Select Topic of the Quiz</string>
    <string name="input">Input User Name Here</string>
    <string name="back">Back</string>
    <string name="start">Start!</string>
    <string name="sports">Sports</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="science">Science and Nature</string>
    <string name="welcome">welcome</string>
    <string name="submit">Submit</string>
    <string name="score">Top 10 Scores</string>
    <string name="help">Help</string>

    <string name="toastMsg">You have submitted your result!</string>
    <string name="helpMsg">You can try different parts from here, just click the icon or the text.</string>
    <string name="helpMsg2">You can choose one category of quiz, then input your name and number of questions(up to 50), after finishing it, click submit. The Result Button can check the top 10 score. </string>
    <string name="deleteMsg">Do you want to delete the message:</string>
    <string name="deleteMsg2">You deleted message #</string>
    <string name="num">Number of Questions</string>
    <string name="correct">The correct answer for</string>
    <string name="helpMsg3">You can check the top 10 scores here. If you want to check the correct answer, you can swipe left and click the number of the question.</string>

    <!-- Bear Image strings -->
    <string name="project4">Bear Image Generator</string>
    <string name="generatebtn">Generate Bear Image</string>
    <string name="history_of_generated_images">Saved images:</string>
    <string name="imagebtn">Button</string>
    <string name="viewAllImages">View All Saved Images</string>
    <string name="widthText">Width: </string>
    <string name="heightText">Height: </string>
    <string name="timeText">Time generated: </string>
    <string name="delete">DELETE</string>
    <string name="height_prompt">Enter bear image height</string>
    <string name="width_prompt">Enter bear image width</string>
    <string name="save_image">Save Image</string>
    <string name="bearhelp">Enter the width and height of the bear image and hit the Generate Bear Image button, you will get a bear image of the size you desire. You can save the image for later viewing. You can also click the View All Images button to view the generated images and delete them as you wish.</string>
    <string name="err">Error</string>
    <string name="instruction">Instructions</string>
    <string name="noimgerr">You haven\'t generated a bear image yet! Enter width and height to generate one.</string>
    <string name="deleteBear">You deleted image #</string>
    <string name="empty">Please enter values for width and height!</string>
    <string name="beartoast">"You saved this bear image: width: "</string>
    <string name="beartoast2">", height: "</string>
    <string name="invalidNumerr">Invalid number format for width and height.</string>
    <string name="deleteMsgBear">Do you want to delete this image? </string>
    <!-- Bear Image strings -->

    <string name="fullScoreMsg">(full score</string>

    <!-- Currency converter begin -->
    <string name="convert">Convert</string>
    <string-array name="currencyList">
        <item>CAD - Canadian Dollar</item>
        <item>USD - US Dollar</item>
        <item>AUD - Australian Dollar</item>
        <item>EUR - Euro</item>
        <item>GBP - British Pound</item>
        <item>JPY - Japanese Yen</item>
        <item>HKD - Hong Kong Dollar</item>
        <item>CNY - Chinese Yuan</item>
    </string-array>
    <string name="currency_enterAmt">Enter Amount</string>
    <string name="currency_result">Result</string>
    <string name="currency_result_toast">Please convert first!</string>
    <string name="currency_fav_toast">Added to Favourite List</string>
    <string name="currency_back_sign">Go Back</string>
    <string name="currency_creator">Currency Converter by Dai Huang</string>
    <string name="currency_no">No</string>
    <string name="currency_yes">Yes</string>
    <string name="currency_record_deleted">Record deleted</string>
    <string name="currency_undo">Undo</string>
    <string name="currency_menu_back">Back</string>
    <string name="currency_inputAmt">input Amount</string>
    <string name="currency_resultAmt">Result</string>
    <string name="currency_convertBtn">Convert</string>
    <string name="project1">Aviation Stack Flight Tracker</string>
    <string name="project2">Currency Converter</string>
    <string name="currency_resultBtn">Save it</string>
    <string name="result">Result</string>
    <string name="currency_help">1. Choose currency to be converted
        \n2. Enter an valid amount
        \n3. Click Convert button to convert
        \n4. Click Save button to save the converted record
        \n5. Click Delete button to delete the record</string>
    <string name="currency_question_title">Question</string>
    <string name="currency_record_question">Delete the Record?</string>
    <string name="currency_about">About</string>
    <string name="currency_guide">Guide</string>
    <string name="currency_date">"Date: "</string>
    <string name="erroMsg">Invalid input for number of questions</string>
    <string name="home">Home</string>
    <!-- Currency converter end -->


</resources>