<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/currency_main"
        android:icon="@drawable/home"
        android:title="Main Page"
        app:showAsAction="always" />

    <item
        android:id="@+id/currency_search"
        android:icon="@drawable/flight_search"
        android:title="@string/project1"
        app:showAsAction="always" />

    <item
        android:id="@+id/currency_bear"
        android:icon="@drawable/bear"
        android:title="Bear"
        app:showAsAction="always" />

    <item
        android:id="@+id/currency_quiz"
        android:icon="@drawable/quiz"
        android:title="Quiz"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/help"
        android:title="@string/currency_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/exchange"
        android:title="@string/currency_guide"
        app:showAsAction="ifRoom" />

</menu>