<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/width"
        android:textSize="11sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widthText"
        app:layout_constraintStart_toStartOf="@+id/bearimage"
        app:layout_constraintTop_toBottomOf="@+id/bearimage"
        />

    <TextView
        android:id="@+id/height"
        android:textSize="11sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightText"
        app:layout_constraintStart_toStartOf="@id/width"
        app:layout_constraintTop_toBottomOf="@id/width"
        />

    <ImageView
        android:id="@+id/bearimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/savebtn"
        android:text="@string/save_image"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height"/>

</androidx.constraintlayout.widget.ConstraintLayout>