<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widthText"
        app:layout_constraintTop_toBottomOf="@+id/imageRow"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightText"
        app:layout_constraintTop_toBottomOf="@+id/width"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeText"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintStart_toStartOf="parent"/>
    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>