<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightTrackerActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/flight_tracker_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/airport_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Airport Code"
        android:gravity="center"
        android:hint="@string/enter_code"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/hintTextView"
        app:layout_constraintStart_toStartOf="@+id/hintTextView"
        app:layout_constraintTop_toBottomOf="@+id/hintTextView" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/search_flights"
        android:backgroundTint="@color/flight_tracker_primary"
        app:layout_constraintEnd_toEndOf="@+id/airport_code"
        app:layout_constraintStart_toEndOf="@+id/savedButton"
        app:layout_constraintTop_toBottomOf="@+id/airport_code" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedSv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedButton">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savedButton" />

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/savedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/saved_flights"
        android:backgroundTint="@color/flight_tracker_primary"
        app:layout_constraintStart_toStartOf="@+id/airport_code"
        app:layout_constraintTop_toBottomOf="@+id/airport_code" />

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_page_hint"
        android:textSize="22sp"
        android:textColor="@color/flight_tracker_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>